--- a/app/views/debug.xml
+++ b/app/views/debug.xml
@@ -1,12 +1,12 @@
 <Alloy>
-    <Collection id="device" src="Device" instance="true"/>
+    <!-- <Collection id="device" src="Device" instance="true"/>
     
 	<Collection src="Device" />
 	<Collection src="DeviceInFolder" />
-	<Collection src="FolderInView" />
+	<Collection src="FolderInView" /> -->
 	
     <Window id="win" backgroundColor="white" layout="vertical">
-    	<ScrollView id="scrollView" layout="vertical" top="5" height="100%">
+    	<!-- <ScrollView id="scrollView" layout="vertical" top="5" height="100%">
 	        <Button onClick="printFolderInViewTable">Print folderInView Table</Button>
 	        <Button onClick="printDeviceInFolderTable">Print deviceInFolder Table</Button>
 	        <Button id="printDeviceBtn">Print Device Table</Button>
@@ -17,7 +17,7 @@
 	        <Button id="closeBtn">Close</Button>
 	        <TextArea height="25%" id="output"></TextArea>
 	        <Widget id="btn" src="TiCircularSliderBtnWidget"/>
-        </ScrollView>
+        </ScrollView> -->
     </Window>
     
 </Alloy>
